--- a/main.env
+++ b/main.env
@@ -1,3 +1,3 @@
-sk:smartfiweie#^#c-i%$5$v!!kgdm#j77uk1&$k5s#v&w5+06i)j9r*kirrigation\
+sk:smartfiweie^c-i%$5$v!!kgdmj77uk1&$k5sv&w5+06i)j9r*kirrigationproj\
 db_user:Batch10
 db_password:FinalYear
